fix: update CORS to allow Netlify origin and fix credentials issue